# dino

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  HACKING  INSTALL  Makefile  Makefile.am  Makefile.template  README  TODO  VERSION  configure  configure.ac  dcvs  dino.glade  dino.gladep  dino.pc  dpush  dtest.cpp  dtest.hpp  random_snippet.sh
extras/lv2/: Makefile  lv2host.cpp  lv2host.hpp  lv2hostplugin.cpp  lv2widget.cpp  lv2widget.hpp  main.cpp
extras/oscplugin/: Makefile  oscplugin.cpp
extras/pydino/: Makefile  pydino.cpp  signalwrappers.hpp  toy-sequencer.py
pixmaps/: Makefile.am  README
scripts/interpreters/: Python.interpreter  Ruby.interpreter  dino_dbus_wrapper.py  dino_dbus_wrapper.rb
src/: Makefile.am  cceditor.cpp  cceditor.hpp  config.hpp.in  dino.cpp  dino.hpp  evilscrolledwindow.hpp  jackclient.cpp  jackclient.hpp  main.cpp  octavelabel.cpp  octavelabel.hpp  pattern.cpp  pattern.hpp  patterneditor.cpp  patterneditor.hpp  ruler.cpp  ruler.hpp  sequencer.cpp  sequencer.hpp  singletextcombo.cpp  singletextcombo.hpp  song.cpp  song.hpp  tempomap.hpp  tempowidget.cpp  tempowidget.hpp  track.cpp  track.hpp  tracklabel.cpp  tracklabel.hpp  trackwidget.cpp  trackwidget.hpp
src/gui/: Makefile.am  action.hpp  arrangementeditor.cpp  arrangementeditor.hpp  cceditor.cpp  cceditor.hpp  controllerdialog.cpp  controllerdialog.hpp  coreactions.cpp  curveeditor.cpp  curveeditor.hpp  dino.cpp  dino.glade  dino.hpp  dinodbusobject.cpp  dinodbusobject.hpp  dinogui.cpp  dinogui.hpp  evilscrolledwindow.hpp  infoeditor.cpp  infoeditor.hpp  main.cpp  noteeditor.cpp  noteeditor.hpp  octavelabel.cpp  octavelabel.hpp  patterndialog.cpp  patterndialog.hpp  patterneditor.cpp  patterneditor.hpp  plugindialog.cpp  plugindialog.hpp  plugininterface.hpp  plugininterfaceimplementation.cpp  plugininterfaceimplementation.hpp  pluginlibrary.cpp  pluginlibrary.hpp  ruler.cpp  ruler.hpp  sequenceeditor.cpp  (+16 more)
src/gui/arrangementeditor/: arrangementeditor.cpp  arrangementeditor.hpp  controllerdialog.cpp  controllerdialog.hpp  keydialog.cpp  keydialog.hpp  sequencewidget.cpp  sequencewidget.hpp  tempolabel.cpp  tempolabel.hpp  tempowidget.cpp  tempowidget.hpp  trackdialog.cpp  trackdialog.hpp  tracklabel.cpp  tracklabel.hpp  trackwidget.cpp  trackwidget.hpp
src/gui/coreactions/: coreactions.cpp
src/gui/dbus/: argument.cpp  argument.hpp  connection.cpp  connection.hpp  object.cpp  object.hpp  proxy.cpp  proxy.hpp
src/gui/dbusinterface/: argument.cpp  argument.hpp  connection.cpp  connection.hpp  dbusinterface.cpp  dino.xml  dinoobject.cpp  dinoobject.hpp  object.cpp  object.hpp
src/gui/debugging/: debugging.cpp  debuggingpage.cpp  debuggingpage.hpp
src/gui/infoeditor/: infoeditor.cpp  infoeditor.hpp
src/gui/libdinoseq_gui/: curveeditor.cpp  curveeditor.hpp  evilscrolledwindow.hpp  ruler.cpp  ruler.hpp  singletextcombo.cpp  singletextcombo.hpp
src/gui/patterneditor/: curveeditor2.cpp  curveeditor2.hpp  noteeditor.cpp  noteeditor.hpp  noteeditor2.cpp  noteeditor2.hpp  octavelabel.cpp  octavelabel.hpp  patterndialog.cpp  patterndialog.hpp  patterneditor.cpp  patterneditor.hpp
src/gui/pixmaps/: README
src/gui/scriptinterface/: scriptwidget.cpp  scriptwidget.hpp
src/libdinoseq/: Makefile.am  atomicint.cpp  atomicint.hpp  atomicptr.hpp  basemidievent.cpp  basemidievent.hpp  ccevent.cpp  ccevent.hpp  cdtree.hpp  command.cpp  command.hpp  commandproxy.cpp  commandproxy.hpp  compoundcommand.cpp  compoundcommand.hpp  controller.cpp  controller.hpp  controller_numbers.hpp  controllerinfo.cpp  controllerinfo.hpp  curve.cpp  curve.hpp  debug.cpp  debug.hpp  deletable.cpp  deletable.hpp  deleter.cpp  deleter.hpp  event.cpp  event.hpp  eventbuffer.hpp  eventlist.cpp  eventlist.hpp  genericcommands.hpp  getfirst.hpp  instrument.hpp  instrumentinfo.cpp  instrumentinfo.hpp  interpolatedevent.cpp  interpolatedevent.hpp  (+44 more)
src/test/dtest/: Doxyfile  dtest.hpp
src/test/libdinoseq/: atomicint_test.cpp  atomicptr_test.cpp  curve_test.cpp  libdinoseq_test.cpp  linkedlist_test.cpp  meta_test.cpp  nodelist_test.cpp  nodequeue_test.cpp  nodeskiplist_test.cpp  ostreambuffer_test.cpp  sequencer_test.cpp  songtime_test.cpp
